--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ptijjo.github.io/KasaWeb",
+  "homepage": "https://ptijjo.github.io/about",
   "name": "agence_kasa",
   "version": "0.1.0",
   "private": true,
